[gd_scene load_steps=14 format=2]

[ext_resource path="res://img/free-trap-platformer/Shooter_Arrow_Trap.png" type="Texture" id=1]
[ext_resource path="res://FinishedNotes/Traps/TrapProjectiles/ArrowProjectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://FinishedNotes/Traps/ArrowTrap.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 3 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Shoot",
"speed": 8.0
} ]

[node name="ArrowTrap" type="Node2D"]
script = ExtResource( 3 )
arrow_scene = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 10 )
animation = "Shoot"
frame = 9
playing = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( -14, -1 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
